--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ Adafruit-PureIO==0.2.3
 aniso8601==4.0.1
 Click==7.0
 Flask==1.0.2
+flask-marshmallow==0.9.0
 Flask-RESTful==0.3.7
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+marshmallow==2.17.0
 pytz==2018.7
 rpi-ws281x==4.1.0
 RPi.GPIO==0.6.5
