--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Adafruit-PureIO==0.2.3
 aniso8601==4.0.1
 Click==7.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 flask-marshmallow==0.9.0
 Flask-RESTful==0.3.7
 itsdangerous==1.1.0
