--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ docopt==0.6.2
 Flask==1.0.2
 Flask-Cors==3.0.7
 flask-marshmallow==0.9.0
+Flask-PyMongo==2.2.0
 Flask-RESTful==0.3.7
 idna==2.7
 itsdangerous==1.1.0
@@ -22,6 +23,7 @@ Jinja2==2.10
 jsonschema==2.6.0
 MarkupSafe==1.1.0
 marshmallow==2.17.0
+pymongo==3.7.2
 pytz==2018.7
 PyYAML==3.13
 requests==2.20.1
