--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,15 @@ services:
       - "5000:5000"
     volumes:
       - ./server:/neohub/server
-  db:
-    image: hypriot/rpi-mysql
-    restart: always
-    ports:
-      - "32000:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: 'root'
-      MYSQL_USER: 'user'
-      MYSQL_PASSWORD: 'password'
+      - MONGO_HOST=db
+  db:
+    image: andresvidal/rpi3-mongodb3:latest
+    restart: unless-stopped
+    command: mongod
+    ports:
+      - "27017:27017"
+      - "28017:28017"
+    volumes:
+      - /data/db:/data/db
+      - /data/configdb:/data/configdb
