tests neopixel post

--- a/server/instance/test.cfg
+++ b/server/instance/test.cfg
@@ -2,6 +2,6 @@ import os
 
 db_hostname = os.getenv('MONGO_HOST', 'localhost')
 
-DEBUG = True
+TESTING = True
 MONGO_URI = 'mongodb://{}:27017/test'.format(db_hostname)
 NEOPIXEL_COLLECTION = 'neopixel'
